nlamah/src/main/resources/org/nlamah/QLS/test/error/doubledefaultblockerror.qls
stylesheet test
{
	page test
	{
		default number widget spinbox
		default number
		{
			width: 200
		}
	}
}